deployments/external-dns/nginx-extdns-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.middleland.space
spec:
  selector:
    app: nginx
  type: NodePort 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
