deployments/external-dns/nginx-extdns-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx 
  annotations:
    kubernetes.io/ingress.class: "nginx" # use the one that corresponds to your ingress controller.
spec:
  rules:
  - host: nginx.middleland.space
    http:
      paths:
      - backend:
          serviceName: nginx 
          servicePort: 80
